# itch

./: Cargo.toml  LICENSE  README.md  RELEASING.md  TODO.md
macros/: Cargo.toml  lib.rs
src/: base.rs  branch.rs  checkout.rs  clean_command.rs  cli.rs  commit.rs  consts.rs  ctx.rs  delete_command.rs  diff.rs  diff_command.rs  editor.rs  error.rs  list_command.rs  llm.rs  load_command.rs  log_command.rs  main.rs  merge_command.rs  new_command.rs  output.rs  path.rs  print.rs  prompt.rs  prune_command.rs  reference.rs  remote.rs  repro.rs  reset.rs  save.rs  save_command.rs  squash_command.rs  status_command.rs  sync.rs  sync_command.rs  timer.rs
src/command/: archive.rs  connect.rs  delete.rs  diff.rs  disconnect.rs  init.rs  list.rs  load.rs  log.rs  mcp.rs  merge.rs  mod.rs  new.rs  please.rs  prune.rs  rename.rs  revert.rs  save.rs  send.rs  split.rs  squash.rs  status.rs  sync.rs  ui-styles.css  ui.js  ui.rs  unsave.rs
test2/: README.md
