[package]
name = "itch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
git2 = "0.18.1"
log = "0.4.20"
maud = { version = "0.25.0", features = ["axum"] }
open = "5.0.1"
serde = { version = "1.0.193", features = ["std", "derive"] }
tokio = { version = "1.35.1", features = ["full"] }
