[package]
name = "itch"
version = "0.9.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
panic = "abort"
lto = true

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
base64 = "0.21.5"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
git2 = "0.20.2"
log = "0.4.20"
maud = { version = "0.25.0", features = ["axum"] }
minus = { version = "5.5.3", features = ["static_output"] }
open = "5.0.1"
quick-xml = "0.31.0"
rand = "0.8.5"
rng = "0.1.0"
serde = { version = "1.0.193", features = ["std", "derive"] }
tempfile = "3.10.1"
tokio = { version = "1.35.1", features = ["full"] }
whoami = "1.5.1"
macros = { path = "macros" }
reqwest = {version = "0.12.12", features = ["blocking"] }
serde_json = "1.0.138"
fork = "0.2.0"
rmcp = { version = "0.3.0", features = ["transport-io"] }
